2005-04-11  Mark McLoughlin  <mark@skynet.ie>

	* control-center-categories.c: update for libgnome-menu
	API renaming.

2005-04-06  Mark McLoughlin  <mark@skynet.ie>

	* control-center-categories.c: (control_center_get_information):
	Update for slight change to menu_tree_lookup() API.

2005-03-27  Sebastien Bacher  <seb128@debian.org>

	* control-center-categories.c: (populate_category),
	(read_categories_from_menu_directory),
	(control_center_get_information): update to the new libgnome-menu API,
	patch from Mark McLoughlin <markmc@redhat.com>.

2005-02-18  Kjartan Maraas  <kmaraas@gnome.org>

	* control-center.c: (create_control_center): Fix a
	sparse warning.

2005-02-03  Chris Lahey  <clahey@boston.ximian.com>

	* control-center-categories.c (control_center_get_information):
	Prune empty categories.

2005-01-26  Jody Goldberg <jody@gnome.org>

	* control-center.c (relayout_canvas) : skip lines that are finished,
	  but keep processing up coming lines.  This should make alignment
	  work again.  While we're here add a bit more padding at the bottom.

2004-11-10  Mark McLoughlin  <mark@skynet.ie>

	* control-center-categories.[ch]: re-write to use libgnome-menu
	to load the contents of the preferences menu.

	* control-center.c:
	(relayout_canvas), (get_x), (get_y), (get_entry),
	(get_line_length): update for control-center-categories.[ch] changes.
	(activate_entry): load the .desktop file and launch.
	(create_window), (main): remove all nautilus and bonobo stuff.
	
	* gnome-control-center.png: rename from control-center2.png.
	
	* gnomecc.desktop.in: update for new icon name.
	
	* GNOME_ControlCenter.server.in: remove, we're not a Nautilus view
	anymore.
	
	* active.png, bcg_top.png, bg.png, bgtop.png,
	  blank.png, ccsplash.png, empty.png, foot.png,
	  gnome-lockscreen.png, gnome-unlockscreen.png,
	  gnomecc-ui.xml, html-view.xpm, kill-gnomecc.sh,
	  left.png, left_top.png, title.png, tree-view.xpm:
	Remove what seems to be a big bunch of cruft.
	