@@ -1,3 +1,8 @@
+2005-05-02  Frederic Crozat  <fcrozat@mandriva.com>
+
+	* control-center-categories.c: (populate_category):
+	append entries, so we get them in the correct order.
+
 2005-04-11  Mark McLoughlin  <mark@skynet.ie>
 
 	* control-center-categories.c: update for libgnome-menu
